tests/type/assign_str_to_int.rz
var a: int = "foo" // error: trying to assign value of type 'str' to variable of type 'int'